@@ -56,6 +56,7 @@ DarkRP 2.4.1 SVN
 [REMOVE] FindPlayerBySID, SID is the player's UserID, Player(SID) does exactly the same thing.
 [REMOVE] Unused functions such as rp_paydaytime and FoodHeal
 [REMOVE] Bannedprops/allowed props, it has been replaced by FPP.
+[REMOVE] CustomTeams and Customshipments.txt, no one used them
 
 DarkRP 2.4.1
 
